@@ -1,4 +1,14 @@
-Thu Jul  6 10:22:56 EDT 2006 / Charles Lepple <clepple@gmail.com>
+Fri Jul 07 14:45:56 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>
+
+ - mge-hid:
+   * add battery.charge.restart, battery.type
+   * fix ups.beeper.status, and add beeper.{on,off} commands
+   * fix outlet.X.delay.{shutdown,start} and add temporary
+     commands (to be discussed) outlet.X.load.{on,off}. This
+     last would better be addressed through parameters of the
+     load.{on,off} command.
+
+Thu Jul  06 10:22:56 EDT 2006 / Charles Lepple <clepple@gmail.com>
 
  - clients/upssched.c: Added additional exec() status information to
    exec_cmd().
